# rusticate

./: .gitignore  Cargo.toml  FIX_MULTI_METHOD_PLAN.md  INFRASTRUCTURE_SUMMARY.md  PHASE5_6_CALL_GRAPH_PLAN.md  PHASE7_DERIVED_TRAITS_PLAN.md  PLAN_CHAP18_TO_CHAP19_AUTO_FIX.md  PROBLEM_FILES_PLAN.md  README.md  REVIEW_TEST_FUNCTIONS_FIX_PLAN.md  RUSTICATE_PLAN.md  TODO  fix_all_imports.sh
analyses/: *compilation*  RUSTICATE_SELF_REVIEW.md  Top1000CratesSizeEstimate.md  Top1000DownloadedRustCrates.md  analyze_modules_mir.log.saved  apas_ai_test_coverage.txt  review_test_functions.txt  rusticate-analyze-modules-mir.json  rusticate-analyze-modules-mir.log.saved  st-mt-consistency-20251024-074237.txt  st-mt-consistency-with-table-20251024-080349.txt  top1000_repo_sizes.txt  top1000_unique_repos.txt  top1005_unique_repos.txt  top1100_unique_repos.txt
analyses/code_review/: review_impl_trait_bounds.txt
checklists/: APASRulesChecklist.md  AlgorithmicAnalysisChecklist.md  ChecklistRules.md  PerBenchmarkChecklist.md  PerSrcFileChecklist.md  PerTestFileChecklist.md  PostPlanChecklist.md  PrePlanChecklist.md  RustRulesChecklist.md
docs/: CALLING_CONVENTION.md  DESIGN_GENERIC_FIX_NO_PUB_TYPE.md  LOGGING_CONVENTIONS.md  ProofParsers.md  RusticateAnalyzeModulesMir.md  UsingRustsMir.md
plans/: PHASE3_PARTIALEQ_PLAN.md  PROBLEM_FILES_PLAN.md  PROBLEM_FILES_RESOLUTION.md  PROGRESS_SUMMARY.md  README.md  RELENTLESS_EXECUTION_SUMMARY.md  SESSION_SUMMARY.md  TESTING_RESULTS.md
prompts/: Architecture.txt  InitialSetup.txt  review-typeclasses.txt
rules/: APASRules.md  AlgorithmicAnalysisRules.md  BenchmarkRules.md  CodexExecution1.md  EnvironmentContext.json  ExecutionStyle1.md  RustRules.md  RusticateRules.md
schemas/: rusticate-analyze-libs.schema.json  rusticate-analyze-modules-mir.schema.json
scripts/: README.md  add_git_metadata.py  add_logging_to_all_binaries.py  add_logging_to_binaries.py  analyze_naming_conventions.py  analyze_top100_std_histogram.py  analyze_top100_std_usage.sh  bench.py  bench_no_run.py  build.py  build_benches.py  build_tests.py  check_test_variant_purity.py  clippy.py  compress_simple_methods.py  format.sh  generate_tags.sh  gettop100rustprojects.sh  grind_codebase.py  grind_module.py  grind_module_emacs.py  human_review.sh  install_ubuntu_tools.sh  llvm-cov.py  review.py  tags.sh  test.py
scripts/APAS/: review_APAS.py
scripts/APAS/benches/: review_APAS_benches.py  review_cargo_bench_names.py  review_duplicate_ids.py  review_timing_params.py
scripts/APAS/src/: find_and_fix_multi_import_patterns.py  find_and_fix_ufcs_aliases.py  fix_apas_where_clauses.py  fix_copyright_header.py  fix_duplicate_imports.py  fix_flathash_methods.py  fix_imports.py  fix_missing_trait_imports.py  fix_mt_discipline.py  fix_super_imports.py  fix_ufcs_delegation.py  fix_unit_structs.py  review_APAS_src.py  review_apas_where_clauses.py  review_conventions.py  review_copyright_header.py  review_duplicate_chap_imports.py  review_duplicate_imports.py  review_functional_modules.py  review_graph_notation.py  review_imports.py  review_missing_traits.py  review_mt_discipline.py  review_naming.py  review_no_factory_pattern.py  review_parallel_model.py  review_persistent_immutability.py  review_remaining_alias_usage.py  (+4 more)
scripts/analyze/: count_as.sh  count_loc.sh  count_scripts.sh  count_vec.sh  count_where.sh  coverage_by_file.py  coverage_status.py  next_coverage_targets.py  pareto_untested_functions.py  pareto_violations.py  review_clippy.py
scripts/benches/: audit_first_n.sh  audit_one_benchmark.sh  count_benchmark_runs.py  count_benchmarks.py
scripts/lib/: review_utils.py
scripts/onetime/: add_logging_final.py  add_logging_to_all_binaries.py  add_logging_v2.py  add_macro_imports.py  batch_convert_remaining_graphs.py  convert_macro_tuples_to_wrappers.py  convert_tuple_constructions.py  convert_tuples_to_wrappers.py  count_qualified_paths_by_directory.py  debug_macro_detection.py  fix_all_graph_test_patterns.py  fix_arrayseq_macro.py  fix_bellmanford_float_setlit.py  fix_derive_errors.py  fix_johnson_float_setlit.py  fix_johnson_mteph_float_setlit.py  fix_lit_macro_triple_patterns.py  fix_log_macro_braces.py  fix_logging_imports.py  fix_qualified_paths_all.py  fix_qualified_paths_batch.py  fix_setlit_tuples.py  fix_test_tuples.py  fix_type_annotations_int.py  get_ordered_files.py  get_qualified_paths_files.py  key_struct_mismatches.py  move_macro_deadcode_simple.py  move_macro_deadcode_tests.py  test_refactor_breakage.py  test_self_compatibility.py
scripts/rust/: fix_import_order.py  fix_to_snake_case.py  review_camelcase.py  review_change_to_snake_case.py  review_import_order.py  review_minimize_ufcs_call_sites.py  review_no_extern_crate.py  review_rust.py
scripts/tmp/: README.md  refactor_review_scripts.py
src/: analyzer.rs  args.rs  ast_utils.rs  count_helper.rs  duplicate_methods.rs  fixer.rs  lib.rs  logging.rs  parser.rs  stdlib_inventory.rs  tool_runner.rs  visitor.rs
src/experiments/: parse_mir_with_ra_ap_syntax.rs
tests/: test_analyzer.rs  test_fixer.rs  test_parser.rs  test_review_bench_modules.rs  test_review_dispatcher.rs  test_review_doctests.rs  test_review_duplicate_bench_names.rs  test_review_impl_order.rs  test_review_import_order.rs  test_review_inherent_and_trait_impl.rs  test_review_integration_test_structure.rs  test_review_internal_method_impls.rs  test_review_minimize_ufcs_call_sites.rs  test_review_module_encapsulation.rs  test_review_no_extern_crate.rs  test_review_pascal_case_filenames.rs  test_review_public_only_inherent_impls.rs  test_review_single_trait_impl.rs  test_review_snake_case_filenames.rs  test_review_struct_file_naming.rs  test_review_stub_delegation.rs  test_review_test_modules.rs  test_review_trait_bound_mismatches.rs  test_review_variable_naming.rs  test_review_where_clause_simplification.rs  test_stdlib_inventory.rs  test_visitor.rs
tests/common/: mod.rs
tests/integration/: common.rs  mod.rs  test_review_camelcase.rs  test_review_import_order.rs  test_review_module_encapsulation.rs  test_review_no_extern_crate.rs
(+104 files in other folders)
