[package]
name = "rusticate"
version = "0.1.0"
edition = "2021"
authors = ["Rusticate Contributors"]
description = "AST-based Rust code review and fix tool for LLMs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rusticate"
readme = "README.md"

[dependencies]
ra_ap_syntax = "0.0.233"
rowan = "0.15"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
walkdir = "2.5"

[dev-dependencies]
serial_test = "3.0"

# Binary naming convention: rusticate-<category>-<operation>
# Examples: rusticate-review-module-encapsulation, rusticate-fix-import-order

[[bin]]
name = "rusticate-review"
path = "src/bin/review.rs"

[[bin]]
name = "rusticate-fix"
path = "src/bin/fix.rs"

[[bin]]
name = "rusticate-parse"
path = "src/bin/parse.rs"

[[bin]]
name = "compile"
path = "src/bin/compile.rs"

[[bin]]
name = "compile-and-test"
path = "src/bin/compile_and_test.rs"

[[bin]]
name = "rusticate-review-module-encapsulation"
path = "src/bin/review_module_encapsulation.rs"

[[bin]]
name = "rusticate-review-no-extern-crate"
path = "src/bin/review_no_extern_crate.rs"

[[bin]]
name = "rusticate-review-pascal-case-filenames"
path = "src/bin/review_pascal_case_filenames.rs"

[[bin]]
name = "rusticate-review-snake-case-filenames"
path = "src/bin/review_snake_case_filenames.rs"

[[bin]]
name = "rusticate-review-import-order"
path = "src/bin/review_import_order.rs"

[[bin]]
name = "rusticate-fix-import-order"
path = "src/bin/fix_import_order.rs"

[[bin]]
name = "rusticate-fix-our-uses-to-wildcards"
path = "src/bin/fix_our_uses_to_wildcards.rs"

[[bin]]
name = "rusticate-review-doctests"
path = "src/bin/review_doctests.rs"

[[bin]]
name = "rusticate-fix-doctests"
path = "src/bin/fix_doctests.rs"

[[bin]]
name = "rusticate-review-single-trait-impl"
path = "src/bin/review_single_trait_impl.rs"

[[bin]]
name = "rusticate-review-integration-test-structure"
path = "src/bin/review_integration_test_structure.rs"

[[bin]]
name = "rusticate-review-impl-order"
path = "src/bin/review_impl_order.rs"

[[bin]]
name = "rusticate-review-where-clause-simplification"
path = "src/bin/review_where_clause_simplification.rs"

[[bin]]
name = "rusticate-review-trait-bound-mismatches"
path = "src/bin/review_trait_bound_mismatches.rs"

[[bin]]
name = "rusticate-review-variable-naming"
path = "src/bin/review_variable_naming.rs"

[[bin]]
name = "rusticate-review-struct-file-naming"
path = "src/bin/review_struct_file_naming.rs"

[[bin]]
name = "rusticate-review-bench-modules"
path = "src/bin/review_bench_modules.rs"

[[bin]]
name = "rusticate-review-duplicate-bench-names"
path = "src/bin/review_duplicate_bench_names.rs"

[[bin]]
name = "rusticate-review-test-modules"
path = "src/bin/review_test_modules.rs"

[[bin]]
name = "rusticate-review-minimize-ufcs-call-sites"
path = "src/bin/review_minimize_ufcs_call_sites.rs"

[[bin]]
name = "rusticate-review-inherent-and-trait-impl"
path = "src/bin/review_inherent_and_trait_impl.rs"

[[bin]]
name = "rusticate-review-internal-method-impls"
path = "src/bin/review_internal_method_impls.rs"

[[bin]]
name = "rusticate-review-public-only-inherent-impls"
path = "src/bin/review_public_only_inherent_impls.rs"

[[bin]]
name = "rusticate-review-redundant-inherent-impls"
path = "src/bin/review_redundant_inherent_impls.rs"

[[bin]]
name = "rusticate-review-trait-method-conflicts"
path = "src/bin/review_trait_method_conflicts.rs"

[[bin]]
name = "rusticate-review-no-trait-method-duplication"
path = "src/bin/review_no_trait_method_duplication.rs"

[[bin]]
name = "rusticate-review-qualified-paths"
path = "src/bin/review_qualified_paths.rs"

[[bin]]
name = "rusticate-review-trait-definition-order"
path = "src/bin/review_trait_definition_order.rs"

[[bin]]
name = "rusticate-review-stt-compliance"
path = "src/bin/review_stt_compliance.rs"

[[bin]]
name = "rusticate-review-inherent-plus-trait-impl"
path = "src/bin/review_inherent_plus_trait_impl.rs"

[[bin]]
name = "rusticate-review-trait-self-usage"
path = "src/bin/review_trait_self_usage.rs"

[[bin]]
name = "rusticate-review-impl-trait-bounds"
path = "src/bin/review_impl_trait_bounds.rs"

[[bin]]
name = "rusticate-review-st-mt-consistency"
path = "src/bin/review_st_mt_consistency.rs"

[[bin]]
name = "review-min-typing"
path = "src/bin/review_min_typing.rs"

[[bin]]
name = "fix-min-typing"
path = "src/bin/fix_min_typing.rs"

[[bin]]
name = "review-mt-per"
path = "src/bin/review_mt_per.rs"

[[bin]]
name = "review-st-mt-consistency"
path = "src/bin/review_st_mt_consistency.rs"

[[bin]]
name = "review-chap18-chap19"
path = "src/bin/review_chap18_chap19.rs"

[[bin]]
name = "review-simplifiable-ufcs"
path = "src/bin/review_simplifiable_ufcs.rs"

[[bin]]
name = "review-unnecessary-ufcs-and-qualified-paths"
path = "src/bin/review_unnecessary_ufcs_and_qualified_paths.rs"

[[bin]]
name = "fix-unnecessary-ufcs"
path = "src/bin/fix_unnecessary_ufcs.rs"

[[bin]]
name = "review-inherent-and-transitive-mt"
path = "src/bin/review_inherent_and_transitive_mt.rs"

[[bin]]
name = "review-grouped-imports"
path = "src/bin/review_grouped_imports.rs"

[[bin]]
name = "review-merge-imports"
path = "src/bin/review_merge_imports.rs"

[[bin]]
name = "fix-merge-imports"
path = "src/bin/fix_merge_imports.rs"

[[bin]]
name = "fix-grouped-imports"
path = "src/bin/fix_grouped_imports.rs"

[[bin]]
name = "fix-chap18-chap19-both"
path = "src/bin/fix_chap18_chap19_both.rs"

[[bin]]
name = "fix-chap18-to-chap19"
path = "src/bin/fix_chap18_to_chap19.rs"

[[bin]]
name = "fix-chap18-to-chap19-per"
path = "src/bin/fix_chap18_to_chap19_per.rs"

[[bin]]
name = "fix-logging"
path = "src/bin/fix_logging.rs"

[[bin]]
name = "rusticate-review-string-hacking"
path = "src/bin/review_string_hacking.rs"

[[bin]]
name = "rusticate-review-stub-delegation"
path = "src/bin/review_stub_delegation.rs"

[[bin]]
name = "rusticate-fix-stub-delegation"
path = "src/bin/fix_stub_delegation.rs"

[[bin]]
name = "rusticate-fix-test-trait-imports"
path = "src/bin/fix_test_trait_imports.rs"

[[bin]]
name = "rusticate-review-typeclasses"
path = "src/bin/review_typeclasses.rs"

[[bin]]
name = "rusticate"
path = "src/bin/rusticate.rs"

[[bin]]
name = "rusticate-review-comment-placement"
path = "src/bin/review_comment_placement.rs"

[[bin]]
name = "rusticate-review-duplicate-methods"
path = "src/bin/review_duplicate_methods.rs"

[[bin]]
name = "rusticate-review-non-wildcard-uses"
path = "src/bin/review_non_wildcard_uses.rs"

[[bin]]
name = "rusticate-fix-non-wildcard-uses"
path = "src/bin/fix_non_wildcard_uses.rs"

[[bin]]
name = "rusticate-fix-duplicate-methods"
path = "src/bin/fix_duplicate_methods.rs"

[[bin]]
name = "rusticate-fix-duplicate-method-call-sites"
path = "src/bin/fix_duplicate_method_call_sites.rs"

[[bin]]
name = "rusticate-analyze-review-typeclasses"
path = "src/bin/analyze_review_typeclasses.rs"

[[bin]]
name = "rusticate-fix-no-pub-type"
path = "src/bin/fix_no_pub_type.rs"

# Counting/metrics tools
[[bin]]
name = "rusticate-count-as"
path = "src/bin/count_as.rs"

[[bin]]
name = "rusticate-count-vec"
path = "src/bin/count_vec.rs"

[[bin]]
name = "rusticate-count-where"
path = "src/bin/count_where.rs"

[[bin]]
name = "rusticate-count-loc"
path = "src/bin/count_loc.rs"

[[bin]]
name = "rusticate-compile-src-tests-benches-run-tests"
path = "src/bin/compile_src_tests_benches_run_tests.rs"

[[bin]]
name = "review-test-functions"
path = "src/bin/review_test_functions.rs"

[[bin]]
name = "review-summary-accuracy"
path = "src/bin/review_summary_accuracy.rs"
